--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.0.2",
-    "openai": "^6.15.0"
+    "openai": "^6.15.0",
+    "serpapi": "^2.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
