--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node ./node_modules/vite/bin/vite.js build",
-    "preview": "node ./node_modules/vite/bin/vite.js preview"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^7.2.4",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "react": "^19.2.0",
@@ -16,7 +17,6 @@
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.1",
-    "vite": "^7.2.4"
+    "@vitejs/plugin-react": "^5.1.1"
   }
 }
