--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "dev": "node ./node_modules/vite/bin/vite.js",
+  "build": "node ./node_modules/vite/bin/vite.js build",
+  "preview": "node ./node_modules/vite/bin/vite.js preview"
+},
   "dependencies": {
     "vite": "^7.2.4",
     "axios": "^1.13.2",
