--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "node ./node_modules/vite/bin/vite.js",
-  "build": "node ./node_modules/vite/bin/vite.js build",
-  "preview": "node ./node_modules/vite/bin/vite.js preview"
-},
+    "build": "node ./node_modules/vite/bin/vite.js build"
+  },
   "dependencies": {
     "vite": "^7.2.4",
-    "axios": "^1.13.2",
-    "bootstrap": "^5.3.8",
+    "@vitejs/plugin-react": "^5.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.1"
+    "react-router-dom": "^7.11.0",
+    "axios": "^1.13.2",
+    "bootstrap": "^5.3.8"
   }
 }
