--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "build": "node ./node_modules/vite/bin/vite.js build"
-  },
+  "build": "npx --no-install vite build"
+},
   "dependencies": {
     "vite": "^7.2.4",
     "@vitejs/plugin-react": "^5.1.1",
