fix vite build for render

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
-  "build": "npx --no-install vite build"
-},
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^5.1.2"
+  },
   "dependencies": {
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
