--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "vite build"
+    "build": "node ./node_modules/vite/bin/vite.js build"
   },
   "devDependencies": {
     "vite": "^7.3.0",
