--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "build": "node ./node_modules/vite/bin/vite.js build"
+    "build": "vite build"
   },
   "devDependencies": {
     "vite": "^7.3.0",
