--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "node": "20.x"
   },
   "scripts": {
-    "build": "vite build"
-  },
+  "build": "npx vite@5.4.8 build"
+},
   "devDependencies": {
   "vite": "^5.4.8",
   "@vitejs/plugin-react": "^4.3.4"
